@@ -35,30 +35,32 @@ $add['outside_bg_attachment'] = array(
 /**
  * ====================================================
  * Header > Top Bar
- * ====================================================
- */
-
-$add['header_top_bar_container'] = array(
-	array(
-		'setting'  => 'header_top_bar_merged',
-		'operator' => '!=',
-		'value'    => 1,
-	),
-);
-
-/**
- * ====================================================
+ * Header > Main Bar
  * Header > Bottom Bar
  * ====================================================
  */
 
-$add['header_bottom_bar_container'] = array(
-	array(
-		'setting'  => 'header_bottom_bar_merged',
-		'operator' => '!=',
-		'value'    => 1,
-	),
-);
+// Main bar is placed first because top bar and bottom bar can be merged into main bar.
+foreach ( array( 'main_bar', 'top_bar', 'bottom_bar' ) as $type ) {
+	if ( 'main_bar' !==  $type ) {
+		$add['header_' . $type . '_container'] = array(
+			array(
+				'setting'  => 'header_top_bar_merged',
+				'operator' => '!=',
+				'value'    => 1,
+			),
+		);
+	}
+
+	$add['header_' . $type . '_menu_highlight_color'] =
+	$add['header_' . $type . '_menu_highlight_text_color'] = array(
+		array(
+			'setting'  => 'header_' . $type . '_menu_highlight',
+			'operator' => '!=',
+			'value'    => 'none',
+		),
+	);
+}
 
 /**
  * ====================================================
